# Ascent_NG

./: .gitignore  AUTHORS  COPYING  END USER LICENSE AGREEMENT  INSTALL  Makefile.am  NEWS  README-WINDOWS.txt  TERM OF USE AGREEMENT  ascent-tag  buildall-vc100.bat  buildall-vc90.bat  configure.ac  extract_svn_revision.sh  make_precompiled_header.sh  make_precompiled_header_debug.sh
extras/collision/assembler/g3dlite/: AABox.cpp  Box.cpp  Crypto.cpp  Makefile.am  Matrix3.cpp  Plane.cpp  System.cpp  Triangle.cpp  Vector3.cpp  Vector4.cpp  format.cpp
extras/collision/assembler/vmap/: AABSPTree.h  BaseModel.cpp  BaseModel.h  CoordModelMapping.h  DebugCmdLogger.cpp  DebugCmdLogger.h  IVMapManager.h  Makefile.am  ModelContainer.cpp  ModelContainer.h  NodeValueAccess.h  RayIntersectionIterator.h  ShortBox.h  ShortVector.h  SubModel.cpp  SubModel.h  TileAssembler.cpp  TileAssembler.h  TreeNode.h  VMapDefinitions.h  VMapFactory.cpp  VMapFactory.h  VMapManager.cpp  VMapManager.h
src/ascent-realmserver/: Channel.cpp  Channel.h  ChannelHandler.cpp  ChannelMgr.h  CharacterHandler.cpp  Chat.cpp  Chat.h  ChatHandler.cpp  ClientManager.cpp  ClientManager.h  ClusterManager.cpp  ClusterManager.h  ConsoleCommands.cpp  ConsoleCommands.h  ConsoleListener.cpp  LocalizationMgr.cpp  LocalizationMgr.h  LogonCommClient.cpp  LogonCommClient.h  LogonCommHandler.cpp  LogonCommHandler.h  Main.cpp  Makefile.am  Master.cpp  Master.h  ObjectStorage.cpp  ObjectStorage.h  QueryHandler.cpp  RStdAfx.cpp  RStdAfx.h  Session.cpp  Session.h  Structures.h  WorkerOpcodes.h  WorkerServer.cpp  WorkerServer.h  WorkerServerSocket.cpp  WorkerServerSocket.h  WorldSocket.cpp  WorldSocket.h  (+1 more)
src/ascent-shared/: AscentConfig.h  AuthCodes.h  BufferPool.cpp  BufferPool.h  ByteBuffer.h  CThreads.cpp  CThreads.h  CallBack.cpp  CallBack.h  CircularQueue.h  Common.h  CoreMemoryAllocator.cpp  CoreMemoryAllocator_Core.cpp  CrashHandler.cpp  CrashHandler.h  Errors.h  FastQueue.h  LocationVector.h  Log.cpp  Log.h  Makefile.am  MemoryLeaks.cpp  MemoryLeaks.h  MersenneTwister.cpp  MersenneTwister.h  NGLog.h  New-Bytebuffer.h  PacketLog.cpp  PacketLog.h  PreallocatedQueue.h  RC4Engine.h  SharedPtr.h  Singleton.h  SmartPointer.h  StackBuffer.h  StackWalker.cpp  StackWalker.h  Storage.h  Timer.h  Util.cpp  (+11 more)
src/ascent-shared/Auth/: BigNumber.cpp  BigNumber.h  HMAC.cpp  HMAC.h  MD5.cpp  MD5.h  Sha1.cpp  Sha1.h  WowCrypt.cpp  WowCrypt.h
src/ascent-shared/Collision/: Interface.cpp  LocationVector.h
src/ascent-shared/Collision/g3dlite/: AABox.cpp  Box.cpp  Crypto.cpp  Matrix3.cpp  Plane.cpp  System.cpp  Triangle.cpp  Vector3.cpp  Vector4.cpp  format.cpp
src/ascent-shared/Collision/vmap/: AABSPTree.h  BaseModel.cpp  BaseModel.h  CoordModelMapping.cpp  CoordModelMapping.h  IVMapManager.h  ManagedModelContainer.cpp  ManagedModelContainer.h  ModelContainer.cpp  ModelContainer.h  NodeValueAccess.h  RayIntersectionIterator.h  ShortBox.h  ShortVector.h  SubModel.cpp  SubModel.h  TileAssembler.cpp  TileAssembler.h  TreeNode.cpp  TreeNode.h  VMapManager.cpp  VMapManager.h
src/ascent-shared/Config/: Config.cpp  Config.h  ConfigEnv.h
src/ascent-shared/Console/: BaseConsole.h  CConsole.cpp  CConsole.h  ConsoleListener.cpp
src/ascent-shared/Database/: CreateInterface.cpp  DBC.cpp  DBC.h  DBCStores.cpp  DBCStores.h  DataStore.h  Database.cpp  Database.h  DatabaseEnv.h  Field.h  MySQLDatabase.cpp  MySQLDatabase.h  PostgresDatabase.cpp  PostgresDatabase.h  SQLiteDatabase.cpp  SQLiteDatabase.h  dbcfile.cpp  dbcfile.h
src/ascent-shared/Network/: CircularBuffer.cpp  CircularBuffer.h  ListenSocketFreeBSD.h  ListenSocketLinux.h  ListenSocketPoll.h  ListenSocketSelect.h  ListenSocketWin32.h  Network.h  Socket.cpp  Socket.h  SocketDefines.h  SocketFreeBSD.cpp  SocketLinux.cpp  SocketMgrFreeBSD.cpp  SocketMgrFreeBSD.h  SocketMgrLinux.cpp  SocketMgrLinux.h  SocketMgrPoll.cpp  SocketMgrPoll.h  SocketMgrSelect.cpp  SocketMgrSelect.h  SocketMgrWin32.cpp  SocketMgrWin32.h  SocketOps.h  SocketOpsFreeBSD.cpp  SocketOpsLinux.cpp  SocketOpsPoll.cpp  SocketOpsSelect.cpp  SocketOpsWin32.cpp  SocketPoll.cpp  SocketSelect.cpp  SocketWin32.cpp
src/ascent-shared/Network-New/: BaseBuffer.h  BaseSocket.h  CircularBuffer.h  ListenSocket.h  Network.h  SocketEngine.cpp  SocketEngine.h  SocketEngine_epoll.cpp  SocketEngine_epoll.h  SocketEngine_iocp.cpp  SocketEngine_iocp.h  SocketEngine_kqueue.cpp  SocketEngine_kqueue.h  SocketEngine_poll.cpp  SocketEngine_poll.h  SocketEngine_select.cpp  SocketEngine_select.h  StraightBuffer.h  TcpSocket.cpp  TcpSocket.h
src/ascent-shared/Threading/: Condition.h  Guard.h  LockedQueue.h  Mutex.cpp  Mutex.h  Queue.h  RWLock.h  ThreadPool.cpp  ThreadPool.h  ThreadStarter.h  Threading.h
src/scripts/src/EventsScripts/: Event_DarkPortal.cpp  Event_DarkPortal.h  Makefile.am  Setup.cpp  Setup.h
src/scripts/src/ExtraScripts/: Makefile.am  Setup.cpp  ZoneHellfirePeninsula.cpp  ZoneSilithus.cpp  ZoneTerokkarForest.cpp  ZoneZangarmarsh.cpp
src/scripts/src/GossipScripts/: Gossip_BoreanTundra.cpp  Gossip_Guard.cpp  Gossip_Innkeepers.cpp  Gossip_Moonglade.cpp  Gossip_Mulgore.cpp  Gossip_Shattrath.cpp  Gossip_Stormwind.cpp  Gossip_Tanaris.cpp  Gossip_Teldrassil.cpp  Gossip_Theramore.cpp  Gossip_Trainer.cpp  Gossip_WyrmrestTemple.cpp  GuardGossip.cpp  Makefile.am  Setup.cpp  Setup.h
src/scripts/src/InstanceScripts/: Battleground_AlteracValley.cpp  Instance_Arcatraz.cpp  Instance_AuchenaiCrypts.cpp  Instance_AzjolNerub.cpp  Instance_BlackMorass.cpp  Instance_BlackfathomDeeps.cpp  Instance_BlackrockDepths.cpp  Instance_BlackrockSpire.cpp  Instance_BloodFurnace.cpp  Instance_Botanica.cpp  Instance_CullingOfStratholme.cpp  Instance_Deadmines.cpp  Instance_DireMaul.cpp  Instance_DrakTharonKeep.cpp  Instance_HallsOfLightning.cpp  Instance_HallsOfStone.cpp  Instance_HellfireRamparts.cpp  Instance_MagistersTerrace.cpp  Instance_ManaTombs.cpp  Instance_Mauradon.cpp  Instance_Nexus.cpp  Instance_OldHillsbradFoothills.cpp  Instance_RagefireChasm.cpp  Instance_RazorfenDowns.cpp  Instance_ScarletMonastery.cpp  Instance_Scholomance.cpp  Instance_Uldaman.cpp  (+20 more)
(+622 files in other folders)
