INCLUDES += -I$(srcdir)

noinst_LIBRARIES = libshared.a

libshared_a_SOURCES = \
    Log.cpp \
    MemoryLeaks.cpp \
    MersenneTwister.cpp \
    MersenneTwister.h \
    PreallocatedQueue.h \
    ByteBuffer.h \
    BufferPool.h \
    BufferPool.cpp \
    Common.h \
    Errors.h \
    Log.h \
    MemoryLeaks.h \
    Singleton.h \
    Threading.h \
    Timer.h \
    UnixThreading.h \
    Util.h \
    Util.cpp \
    WinThreading.h \
    WorldPacket.h \
    crc32.cpp \
    crc32.h \
    hashmap.cpp \
    hashmap.h \
    FastQueue.h \
    Threading/Mutex.cpp \
    Threading/ThreadPool.cpp \
    Storage.h \
    hearthstone_getopt.h \
    hearthstone_getopt.cpp \
    CrashHandler.h \
    CrashHandler.cpp \
    Auth/BigNumber.cpp \
    Auth/BigNumber.h \
	Auth/HMAC.cpp \
    Auth/HMAC.h \
    Auth/MD5.cpp \
    Auth/MD5.h \
    Auth/Sha1.cpp \
    Auth/Sha1.h \
    Auth/WowCrypt.cpp \
    Auth/WowCrypt.h \
    Config/Config.cpp \
    Config/Config.h \
    Config/ConfigEnv.h \
    Database/DBC.cpp \
    Database/Database.cpp \
    Database/DBC.h \
    Database/Database.h \
    Database/DBCStores.cpp \
    Database/DatabaseEnv.h \
    Database/DBCStores.h \
    Database/Field.h \
    Database/DataStore.h \
    Database/dbcfile.cpp \
    Database/dbcfile.h \
    Network/CircularBuffer.h \
    Network/CircularBuffer.cpp \
    Network/ListenSocketPoll.h \
    Network/ListenSocketSelect.h \
    Network/ListenSocketLinux.h \
    Network/ListenSocketFreeBSD.h \
    Network/Network.h \
    Network/Socket.cpp \
    Network/Socket.h \
    Network/SocketDefines.h \
    Network/SocketLinux.cpp \
    Network/SocketFreeBSD.cpp \
    Network/SocketMgrLinux.cpp \
    Network/SocketMgrLinux.h \
    Network/SocketMgrFreeBSD.cpp \
    Network/SocketMgrFreeBSD.h \
    Network/SocketOps.h \
    Network/SocketOpsLinux.cpp \
    Network/SocketOpsFreeBSD.cpp \
    Network/SocketMgrSelect.h \
    Network/SocketMgrSelect.cpp \
    Network/SocketOpsSelect.cpp \
    Network/SocketSelect.cpp \
    Network/SocketMgrPoll.h \
    Network/SocketMgrPoll.cpp \
    Network/SocketOpsPoll.cpp \
    Network/SocketPoll.cpp \
    Collision/vmap/AABSPTree.h \
    Collision/vmap/BaseModel.cpp \
    Collision/vmap/BaseModel.h \
    Collision/vmap/CoordModelMapping.cpp \
    Collision/vmap/CoordModelMapping.h \
    Collision/vmap/IVMapManager.h \
    Collision/vmap/ManagedModelContainer.cpp \
    Collision/vmap/ManagedModelContainer.h \
    Collision/vmap/ModelContainer.cpp \
    Collision/vmap/ModelContainer.h \
    Collision/vmap/NodeValueAccess.h \
    Collision/vmap/RayIntersectionIterator.h \
    Collision/vmap/ShortBox.h \
    Collision/vmap/ShortVector.h \
    Collision/vmap/SubModel.cpp \
    Collision/vmap/SubModel.h \
    Collision/vmap/TileAssembler.cpp \
    Collision/vmap/TileAssembler.h \
    Collision/vmap/TreeNode.cpp \
    Collision/vmap/TreeNode.h \
    Collision/vmap/VMapManager.cpp \
    Collision/vmap/VMapManager.h \
    Collision/g3dlite/AABox.cpp \
    Collision/g3dlite/Box.cpp \
    Collision/g3dlite/Crypto.cpp \
    Collision/g3dlite/Matrix3.cpp \
    Collision/g3dlite/Plane.cpp \
    Collision/g3dlite/System.cpp \
    Collision/g3dlite/Triangle.cpp \
    Collision/g3dlite/Vector3.cpp \
    Collision/g3dlite/Vector4.cpp \
    Collision/g3dlite/format.cpp
    
