

## Process this file with automake to produce Makefile.in

## CPP flags for includes, defines, etc.
AM_CPPFLAGS = -I$(srcdir) -I$(srcdir)/../../include -I$(srcdir)/../../include/g3dlite

noinst_LIBRARIES = libg3dlite.a
libg3dlite_a_SOURCES = \
	AABox.cpp \
	Box.cpp \
	Crypto.cpp \
	format.cpp \
	Matrix3.cpp \
	Plane.cpp \
	System.cpp \
	Triangle.cpp \
	Vector3.cpp \
	Vector4.cpp

EXTRA_DIST = \
	license.html


