INCLUDES = -I$(top_srcdir)/src/ascent-logonserver \
   -I$(top_srcdir)/src/ascent-realmserver -I$(top_srcdir)/src/ascent-shared -I$(top_srcdir)/src/ascent-voicechat \
   -I$(top_srcdir)/src/ascent-world -I$(srcdir) -I$(srcdir)/../../../../dep/include \
   -I$(srcdir)/../../../../dep/src -I$(srcdir)/../../../../src
INCLUDES += -I$(srcdir)/../../../ascent-shared/g3dlite -I$(srcdir)/../../../ascent-shared/vmap \
            -I../Common/

AM_CXXFLAGS = -DSCRIPTLIB

lib_LTLIBRARIES = libSunInstanceScripts.la

libSunInstanceScripts_la_SOURCES = Instance_Arcatraz.cpp \
Instance_AuchenaiCrypts.cpp \
Instance_AzjolNerub.cpp \
Instance_BlackMorass.cpp \
Instance_BlackrockDepths.cpp \
Instance_BlackrockSpire.cpp \
Instance_BloodFurnace.cpp \
Instance_Botanica.cpp \
Instance_CullingOfStratholme.cpp \
Instance_Deadmines.cpp \
Instance_DireMaul.cpp \
Instance_DrakTharonKeep.cpp \
Instance_HallsOfLightning.cpp \
Instance_HellfireRamparts.cpp \
Instance_MagistersTerrace.cpp \
Instance_ManaTombs.cpp \
Instance_Mauradon.cpp \
Instance_Nexus.cpp \
Instance_OldHillsbradFoothills.cpp \
Instance_HallsOfStone.cpp \
Instance_RagefireChasm.cpp \
Instance_RazorfenDowns.cpp \
Instance_ScarletMonastery.cpp \
Instance_Scholomance.cpp \
Instance_SethekkHalls.cpp \
Instance_ShadowLabyrinth.cpp \
Instance_ShadowfangKeep.cpp \
Instance_TheMechanar.cpp \
Instance_TheShatteredHalls.cpp \
Instance_TheSlavePens.cpp \
Instance_TheSteamvault.cpp \
Instance_TheUnderbog.cpp \
Instance_Uldaman.cpp \
Instance_UtgardeKeep.cpp \
Instance_WailingCaverns.cpp \
Instance_TheStockade.cpp \
Instance_ZulFarrak.cpp \
../Common/Instance_Base.cpp \
../Common/Base.cpp \
Setup.cpp
