INCLUDES = -I$(top_srcdir)/src/ascent-logonserver \
   -I$(top_srcdir)/src/ascent-realmserver -I$(top_srcdir)/src/ascent-shared -I$(top_srcdir)/src/ascent-voicechat \
   -I$(top_srcdir)/src/ascent-world -I$(srcdir) -I$(srcdir)/../../../../dep/include \
   -I$(srcdir)/../../../../dep/src -I$(srcdir)/../../../../src
INCLUDES += -I$(srcdir)/../../../ascent-shared/g3dlite -I$(srcdir)/../../../ascent-shared/vmap \
            -I../Common/

AM_CXXFLAGS = -DSCRIPTLIB

lib_LTLIBRARIES = libSunQuestScripts.la

libSunQuestScripts_la_SOURCES = Setup.cpp \
../Common/Base.cpp \
ArathiHighlands.cpp \
Azshara.cpp \
Azuremyst_Isle.cpp \
BladeEdge_Mountains.cpp \
BlastedLands.cpp \
BloodmystIsle.cpp \
Darkshore.cpp \
DeathKnight.cpp \
Desolace.cpp \
Dragonblight.cpp \
Druid.cpp \
Duskwood.cpp \
Dustwallow_Marsh.cpp \
Eastern_Plaguelands.cpp \
EversongWoods.cpp \
FirstAid.cpp \
Ghostlands.cpp \
Hellfire_Peninsula.cpp \
HillsbradFoothills.cpp \
Isle_of_QuelDanas.cpp \
Howling_Fjord.cpp \
LochModan.cpp \
Mage.cpp \
Mulgore.cpp \
Nagrand.cpp \
Netherstorm.cpp \
Old_Hillsbrad.cpp \
Paladin.cpp \
QuestGossip.cpp \
QuestHooks.cpp \
RedridgeMountains.cpp \
Shadowmoon.cpp \
SilvermoonCity.cpp \
Silverpine_Forest.cpp \
Stormwind.cpp \
StranglethornVale.cpp \
Tanaris.cpp \
Teldrassil.cpp \
Terrokar_Forest.cpp \
The_Barrens.cpp \
ThousandNeedles.cpp \
TirisfalGlades.cpp \
Undercity.cpp \
UnGoro.cpp \
Unsorted.cpp \
Warrior.cpp \
Westfall.cpp \
Zangarmarsh.cpp \
SholazarBasin.cpp
