INCLUDES = -I$(top_srcdir)/src/ascent-logonserver \
   -I$(top_srcdir)/src/ascent-realmserver -I$(top_srcdir)/src/ascent-shared -I$(top_srcdir)/src/ascent-voicechat \
   -I$(top_srcdir)/src/ascent-world -I$(srcdir) -I$(srcdir)/../../../../dep/include \
   -I$(srcdir)/../../../../dep/src -I$(srcdir)/../../../../src
INCLUDES += -I$(srcdir)/../../../ascent-shared/g3dlite -I$(srcdir)/../../../ascent-shared/vmap \
            -I../Common/

AM_CXXFLAGS = -DSCRIPTLIB

lib_LTLIBRARIES = libSunInstanceScripts.la

libSunInstanceScripts_la_SOURCES = Raid_BlackTemple.cpp \
Raid_BlackwingLair.cpp \
Raid_CoT_BattleOfMountHyjal.cpp \
Raid_GruulsLair.cpp \
Raid_Karazhan.cpp \
Raid_MoltenCore.cpp \
Raid_Naxxramas.cpp \
Raid_OnyxiasLair.cpp \
Raid_SerpentshrineCavern.cpp \
Raid_TheEye.cpp \
Raid_TheObsidianSanctum.cpp \
Raid_Ulduar.cpp \
Raid_ZulGurub.cpp \
Raid_Magtheridons_Lair.cpp \
Raid_SunwellPlateau.cpp \
Raid_WorldBosses.cpp \
Raid_ZulAman.cpp \
../Common/Instance_Base.cpp \
../Common/Base.cpp \
Setup.cpp
